--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "Database": {
+    "ConnectionString": "Server=L0058899\\LOCAL14;Database=SchoolCross;Trusted_Connection=True;"
+},
   "AllowedHosts": "*"
 }
